# closeread

./: .gitignore  .quartoignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  code-highlighting.qmd  custom.scss  demo-block-types.qmd  gg-close-read.qmd  index.qmd  minard-index.qmd  posit-conf.qmd  posit-conf.scss  shrinkToFit.qmd  sidebar-base-quarto.qmd  sidebar-cr-multiple-block-types.qmd  sidebar-cr.qmd  template.qmd
docs/: .gitignore  README.md  _publish.yml  _quarto.yml  copy_extension.sh  index-styles.css  index.qmd  main.py  pyproject.toml
docs/demos/: index.qmd
docs/gallery/: index.qmd
docs/gallery/demos/_poem-2/: nytimes.scss
docs/gallery/demos/_sticky-block-types/: index.qmd
docs/gallery/demos/a-poem-about-suffering/: index.qmd  nytimes.css  nytimes.css.map  nytimes.scss
docs/gallery/demos/build-up-plots/: index.qmd
docs/gallery/demos/code-output/: index.qmd
docs/gallery/prizes/: nov2024-grandwinner.yml  nov2024-honourablementions.yml  nov2024-specialprizes.yml
docs/guide/: _metadata.yml  authoring-tools.qmd  components.qmd  focus-effects.qmd  index.qmd  interactive-graphics.qmd  layouts.qmd  styling.qmd
docs/reference/: index.qmd  ref-styles.css  reference.ejs  section-options.yml  step-options.yml  sticky-options.yml  style-options.yml  trigger-options.yml  yaml-options.yml
docs/tests/: _metadata.yml  index.qmd
docs/tests/figure-environments/: index.qmd
docs/tests/sticky-block-types/: index.qmd
docs/tests/toc-improvement/: index.qmd
docs/tests/widgets-in-python/: index.qmd
docs/tests/widgets-in-r/: index.qmd
(+316 files in other folders)
