[project]
name = "closeread-docs"
version = "0.1.0"
description = "Documentation website for Closeread"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipyleaflet>=0.20.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "statsmodels>=0.14.5",
]
